# satellite-telemetry-simulator

./: .gitignore  README.md  satellite-telemetry-simulator.ino
MPU6050/: README.md
bme280/: README.md  bme280.ino
bme280/bme280test.cpp/: bme280test.cpp.ino
docs/: kalman filter.md  sensors.md
libraries/I2C_functions/: I2C_functions.h
libraries/utc_data/: utc_data.cpp
satellite-telemetry-simulator/: CMakeLists.txt  README.md  bme280_i2c.c  bme280_i2c.h  mpu6050_i2c.c  mpu6050_i2c.h  satellite-telemetry-simulator.cpp  satellite_telemetry_simulator.cpp
satellite-telemetry-simulator/data_preprocessing/: json_conversion.cpp
satellite-telemetry-simulator/sensors/: MPU6050.cpp  MPU6050.h
src/: README.md  SatelliteData dependency injection data flow.drawio  todo.md
src/MPU6050/: MPU6050.ino  README.md
src/common/: satellite_data.h
src/data_preprocessing/: json_conversion.cpp  json_conversion.h  utc_data.cpp  utc_data.h
src/mock_tests/: mock_sat.cpp  mock_sat.h  satellite_test.cc  satellite_test.h  satellite_unit_test.cc
src/satellite-telemetry-simulator/: .gitignore  CMakeLists.txt  README.md  bme280_i2c.c  bme280_i2c.h  kalman_filter.cpp  kalman_filter.h  kalman_filter.tex  kalman_sensor_filter.c  mpu6050_i2c.c  mpu6050_i2c.h  notes.txt  pico_satellite_factory.cpp  pico_satellite_factory.h  satellite_factory.cpp  satellite_factory.h  satellite_telemetry_simulator.cpp  satellite_telemetry_simulator.h  set_telemetry.h
src/satellite-telemetry-simulator/data_preprocessing/: json_conversion.cpp  json_conversion.h  utc_data.h
src/satellite_sim/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mock_test.cpp  pico_flasher.cpp  pico_flasher.h  q_output_stream.cpp  q_output_stream.h  q_satellite_factory.cpp  q_satellite_factory.h  q_threads.cpp  q_threads.h  satellite_factory.h  serial_port.cpp  serial_port.h
src/sensors/: I2C_functions.cpp  MPU6050.cpp  MPU6050.h  README.md  bme280.cpp  bme280.h  sensors.ino
src/sensors/MPU6050/: MPU6050.ino
src/sensors/sensors/: I2C_functions.cpp  I2C_scanner.cpp  I2C_scanner.h  MPU6050.cpp  MPU6050.h  bme280.cpp  bme280.h  sensors.ino
src/sensors/test_sensors/sketch_nov28a/: bme280_test.cpp
src/tests/MPU6050/: MPU6050.ino
src/tests/bme280/: README.md  bme280.ino
src/tests/test_sensors/sketch_nov28a/: bme280_test.h  sketch_nov28a.ino
